<resources>
    <string name="app_name">Atm</string>
    <string name="txt_userid">userid</string>
    <string name="input_userid">please input your userid</string>
    <string name="txt_password">password</string>
    <string name="input_password">please input your password</string>
    <string name="txt_login">Login</string>
    <string name="txt_cancel">Cancel</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="setting">setting</string>
    <string name="help">HELP</string>
    <string name="title_activity_finance">FinanceActivity</string>
    <string name="date">日期</string>
    <string name="info">說明</string>
    <string name="amount">金額</string>
    <string name="add">新增</string>
</resources>
